@@ -1,10 +1,11 @@
 Revision history for Perl extension Text-Sass-XS
 
 {{$NEXT}}
+    - Adds ExtUtils::CBuilder to dependencies.
+    - Changes compiler and linker flags.
 
 0.03 2013-06-17T13:21:24Z
     - Adds OO Interface.
-    - Adds ExtUtils::CBuilder to dependencies.
 
 0.02 2013-06-16T13:52:56Z
     - Uses g++ to compile xs instead of cc.
